QUrl::setEncodedQueryItems should replace

If there is  already a query string present in the url. It should be
replace when setEncodedQueryItems is called again.

Task-number: QTBUG-26148
Change-Id: I2bd4e1f5d9b4161d64556062e97141888ad89b3b
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>